feat: update fe blog

--- a/fe_blog/2021_07_fe_week.md
+++ b/fe_blog/2021_07_fe_week.md
@@ -84,11 +84,21 @@ CSS 移动端适配方案 小总结:
 
 ### 奇舞周刊
 * 401期 ~ 405期
+* [401期](https://weekly.75.team/issue401.html)
 * [cookies - SameSite那些事](https://mp.weixin.qq.com/s/QZkOXhQIg2LqDWpi7mzCdQ)
 * [V8 执行 JavaScript过程](https://mp.weixin.qq.com/s/Y1kc5K7kr8y7jKC0mXg1Bw)
+* [编写干净的React代码](https://mp.weixin.qq.com/s?__biz=Mzg5MDY1MjIxMA==&mid=2247496203&idx=1&sn=e145d6a236a4d351b6fea3ff148c8b52&source=41#wechat_redirect) - 关于React Context部分可用于实际代码
+* [rollup - 构建原理及简易实现](https://mp.weixin.qq.com/s/diE0M-TWtGoYUUTfTNN26A)
+* [大型前端项目 DevOps 沉思录 —— CI 篇](https://mp.weixin.qq.com/s/YyZvpiBD34VY-VZnjDtGoQ) - 质量一般
+* [前端 SEO基础知识](https://mp.weixin.qq.com/s/eo54xuiLMw5HRDzmBK71Qg) - 质量一般
+* [如何做一次高效的事故复盘？](https://mp.weixin.qq.com/s/_q0n-gK7tSQCIiE7d8GJCw) - 小总结：事故不可避免，事故复盘同时也是一个学习机会。
+
 
 ### 政采云前端周刊
 * 137期 ~ 142期
+* [137期](https://weekly.zoo.team/detail/137)
 * [如何实现Node RPC（1）](https://developer.aliyun.com/article/712448)
 * [模块化系列 - 彻底理清 AMD,CommonJS,CMD,UMD,ES6](https://zhuanlan.zhihu.com/p/108217164)
-
+* [iconfont 支持全新的彩色字体图标](https://zhuanlan.zhihu.com/p/377136770?utm_source=wechat_session&utm_medium=social&utm_oi=27714312470528&s_r=0) 
+* [单页面应用history路由实现原理](https://cloud.tencent.com/developer/article/1653836)
+* [直观比较四种NLP模型 - 神经网络，RNN，CNN，LSTM](https://juejin.cn/post/6969394206414471175/) - 实际开发很难用到系列
