feat: update feOptimization.md

--- a/fe_blog/2021_07_fe_week.md
+++ b/fe_blog/2021_07_fe_week.md
@@ -82,6 +82,20 @@ CSS 移动端适配方案 小总结:
 
 ## 20210712 ~ 20210718
 ### [科技爱好者周刊 - 167期]
+* [广告拦截器太过分了](https://github.com/ruanyf/weekly/blob/master/docs/issue-167.md)
+```
+周报开头是作者吐槽广告拦截器，公司内部开发的系统 也经常出现 同事反馈页面数据无法加载情况，结果是被广告拦截器 拦截、禁用。
+目前的广告拦截器，可以拦截广告， 也容易误杀，还有优化空间。
+今年70岁的理查德*布兰森 04年创办了维珍银河公司，目标是开发宇宙旅游， 7月11号试飞成功， 明年开始对外服务，票价25万美元，已有600多人报名；
+自动驾驶：德国大众汽车公司宣布自家自动驾驶出租车费用：8.5美元/小时,理论上，自动驾驶普及后，私家车将消失，调度中心可以随时随地安排用车；
+windows 365服务，浏览器中的windows10系统， 所有状态保存在云端；
+怎样找到网站攻击者？对方躲在Tor网络后面，看不到真实IP地址， 作者想了一个办法，做了一个假的管理后台，在网站报错信息里故意泄露后台网址，引诱对方上钩。
+popular-message， 轻量级网页提示消息JS库，无任何依赖；
+eftp Mac OS FTP 上传工具；
+裸鼹鼠 野外寿命30年，比一般老鼠长寿10倍，科学家正在研究如何将 裸鼹鼠 长寿生物特征、基因移植到人体，实现人类寿命延长；
+```
+* [重新认识Pixel/DPI/PPI 以及像素密度](https://blog.infolink.com.tw/2021/rediscover-pixel-dpi-ppi-and-pixel-density/)
+* [浏览器可视化操作网站，生成React代码](https://utopia.app/)
 
 ### 奇舞周刊
 * 401期 ~ 405期
