feat: update fe blog md

--- a/fe_blog/2021_07_fe_week.md
+++ b/fe_blog/2021_07_fe_week.md
@@ -100,6 +100,7 @@ eftp Mac OS FTP 上传工具；
 ### 奇舞周刊
 * 401期 ~ 405期
 * [401期](https://weekly.75.team/issue401.html)
+* [401期](https://weekly.75.team/issue402.html)
 * [cookies - SameSite那些事](https://mp.weixin.qq.com/s/QZkOXhQIg2LqDWpi7mzCdQ)
 * [V8 执行 JavaScript过程](https://mp.weixin.qq.com/s/Y1kc5K7kr8y7jKC0mXg1Bw)
 * [编写干净的React代码](https://mp.weixin.qq.com/s?__biz=Mzg5MDY1MjIxMA==&mid=2247496203&idx=1&sn=e145d6a236a4d351b6fea3ff148c8b52&source=41#wechat_redirect) - 关于React Context部分可用于实际代码
@@ -107,12 +108,24 @@ eftp Mac OS FTP 上传工具；
 * [大型前端项目 DevOps 沉思录 —— CI 篇](https://mp.weixin.qq.com/s/YyZvpiBD34VY-VZnjDtGoQ) - 质量一般
 * [前端 SEO基础知识](https://mp.weixin.qq.com/s/eo54xuiLMw5HRDzmBK71Qg) - 质量一般
 * [如何做一次高效的事故复盘？](https://mp.weixin.qq.com/s/_q0n-gK7tSQCIiE7d8GJCw) - 小总结：事故不可避免，事故复盘同时也是一个学习机会。
-
+* [你可能不知道的五个React关键点](https://mp.weixin.qq.com/s/Brp0TECsGpdBdv1686TPiQ)
+```
+以下两点有收获：
+React state 是如何更新的;
+useRef 钩子能够在重渲染过程中保存 state
+```
+* [字节跳动 - 汉字笔画顺序实现原理](https://mp.weixin.qq.com/s/dhh5UVXPD9d9bD3JfYOU9w) 关于Canvas、计算机算法等讲解的比较深入
+* [Vue 3 的 SFC Style CSS Variable Injection 提案实现的背后](https://mp.weixin.qq.com/s/cj2gqZGCtUnFtkoSOqClvw)
+* [浏览器 HTML parse解析实现](https://mp.weixin.qq.com/s/ku6yNZqIKH9wBSGbUdhW0A)
+* [Vue+微前端(QianKun)落地实施和最后部署上线总结](https://juejin.cn/post/6973156414210441247)
+* [CANVAS增量渲染：裁剪和拼接，小数与残影](https://mp.weixin.qq.com/s/dbL62keGESFeNvyGYqFrPw) 在线文档 业务细节处理
+* [gRPC vs REST：两种API架构风格的对比](https://mp.weixin.qq.com/s/R2Y5C3ebQ04uCKwAs0pATA)
 
 ### 政采云前端周刊
 * 137期 ~ 142期
 * [137期](https://weekly.zoo.team/detail/137)
 * [138期](https://weekly.zoo.team/detail/138)
+* [139期](https://weekly.zoo.team/detail/139)
 * [如何实现Node RPC（1）](https://developer.aliyun.com/article/712448)
 * [模块化系列 - 彻底理清 AMD,CommonJS,CMD,UMD,ES6](https://zhuanlan.zhihu.com/p/108217164)
 * [iconfont 支持全新的彩色字体图标](https://zhuanlan.zhihu.com/p/377136770?utm_source=wechat_session&utm_medium=social&utm_oi=27714312470528&s_r=0) 
@@ -121,3 +134,13 @@ eftp Mac OS FTP 上传工具；
 * [NodeJS FS 用法](https://zhuanlan.zhihu.com/p/72134186) - 难得出现的低质博文
 * [React 18发布计划](https://zh-hans.reactjs.org/blog/2021/06/08/the-plan-for-react-18.html) - 小新闻
 * [美团民宿团队跨端方案](https://www.toutiao.com/i6972135573587001886/?timestamp=1623340636&app=news_article&use_new_style=1&req_id=202106102357160101351600180C0A35AC&share_token=d39ce3ec-12cc-495e-99e0-880807a40782&group_id=6972135573587001886&wid=1626362028576)
+* [现代浏览器观察者 Observer API指南](https://juejin.cn/post/6844903976937209863#heading-4)
+* [数据上报方式是否存在最优解？](https://mp.weixin.qq.com/s/_3OSxMErTD2ZMNK7kf02LA) ajax, image, beacon, 数据上报的几种方式，质量一般
+* [前端项目负责人在项目初期需要做什么](https://mp.weixin.qq.com/s/UwZ3BcdGG8vZccY0RtHY4w) 关于前端负责人 进入新团队 完整思路，比较实用
+* [我工作中如何使用git](https://juejin.cn/post/6974184935804534815#comment) 关于Git高质量文章
+* [Dooring可视化搭建平台数据源设计剖析](https://mp.weixin.qq.com/s/1lr_ohfNucaUihQaeUswWQ) 关于低代码讲解的表浅显
+* [玉伯： 开源给我带来了什么？](https://mp.weixin.qq.com/s/B2gfoxnPo0P0dY1DaIjehQ)
+```
+文档现行，别上来就敲代码；开源最重要的是文档，文档让自己和别人了解项目，即使项目还没落地；
+GitHub也没有大家想象中那么纯洁， 很多开源项目就是来蹭名利的；
+```
