feat: fe_blog add code_idea.md

--- a/fe_blog/2021_07_fe_week.md
+++ b/fe_blog/2021_07_fe_week.md
@@ -100,7 +100,7 @@ eftp Mac OS FTP 上传工具；
 ### 奇舞周刊
 * 401期 ~ 405期
 * [401期](https://weekly.75.team/issue401.html)
-* [401期](https://weekly.75.team/issue402.html)
+* [402期](https://weekly.75.team/issue402.html)
 * [cookies - SameSite那些事](https://mp.weixin.qq.com/s/QZkOXhQIg2LqDWpi7mzCdQ)
 * [V8 执行 JavaScript过程](https://mp.weixin.qq.com/s/Y1kc5K7kr8y7jKC0mXg1Bw)
 * [编写干净的React代码](https://mp.weixin.qq.com/s?__biz=Mzg5MDY1MjIxMA==&mid=2247496203&idx=1&sn=e145d6a236a4d351b6fea3ff148c8b52&source=41#wechat_redirect) - 关于React Context部分可用于实际代码
@@ -144,3 +144,37 @@ useRef 钩子能够在重渲染过程中保存 state
 文档现行，别上来就敲代码；开源最重要的是文档，文档让自己和别人了解项目，即使项目还没落地；
 GitHub也没有大家想象中那么纯洁， 很多开源项目就是来蹭名利的；
 ```
+
+
+## 20210719 ~ 20210725
+### [科技爱好者周刊 - 168期]
+
+### 知乎： 前端快爆
+* [技术周刊 2021-07-16：Chrome 即将推出 HTTPS-First 模式](https://zhuanlan.zhihu.com/p/390389873)
+```
+FireFox 90 发布： 支持了 matrix 协议： 实时通信的开放协议， 允许拥有一个通信服务提供商帐户的用户与不同服务提供商的用户进行网络聊天、IP 语音和视频通话，它旨在使不同服务提供商之间的实时通信无缝工作，就像使用电子邮件一样。
+Chrome 93 开始， 将提供 HTTPS-First, 不是HTTPS网站将出现警告提示；
+Safari 127 技术预览版发布， 支持通过 canvas 创建、访问和设置 non-sRGB ImageData。
+```
+
+### 奇舞周刊
+* 403期 ~ 405期
+* [403期](https://weekly.75.team/issue403.html)
+* [从0到1实现浏览器端沙箱运行环境](https://mp.weixin.qq.com/s/7CD_F0hEZtYRK0fvBWb_gQ)
+* [一文了解AsyncHooks](https://mp.weixin.qq.com/s/08AVmJLMdMNm4yNWQwk-DA) - NodeJS 追踪异步资源 API
+* [Node版Spring - 那些让人眼前一亮的NestJS特性](https://mp.weixin.qq.com/s/lOJ-_i9IVQsvRVGwCFhm9g) - 对Node框架Nest简单介绍，并不高质
+* [手把手教你打造前端智能图标识别工具](https://mp.weixin.qq.com/s/Xz234s6ZHhxV5LxdqPfWBg) 前端机器学习入门教程
+* [Vite 你不知道的小妙招](https://mp.weixin.qq.com/s/J_HBCBATgVEexbhzKvb2wQ) - vite 静态资源的几种处理方式，重点学习， 接下来 项目优化将用到；
+* [我优化了进度条，页面性能竟提高了70%](https://mp.weixin.qq.com/s/yk7llzupEwkKdMwwGeenzQ) 关于前端动画很有启发的博文
+* [TypeScript编译器使用](https://mp.weixin.qq.com/s/nLG43aDSomGjCS5iIT8Gmg) - 讲解的不是很全面，质量一般
+* [谈一谈 Node.js Stream 中 Readable 类的源码实现](https://mp.weixin.qq.com/s/sD6Pi3hS9H5XysmG5cRDhw) 最新Node 源码分析文， 推荐
+* [404期](https://weekly.75.team/issue404.html)
+
+
+### 政采云前端周刊
+* 140期 ~ 142期
+* [140期](https://weekly.zoo.team/detail/140)
+* [JavaScript代码整洁之道 - 重构篇](https://mp.weixin.qq.com/s/PYu4x2SG4Oq7VOkUXPaGPQ) 对于代码优化，有一定借鉴
+* [如何从流程上设计可持续维护的组件](https://mp.weixin.qq.com/s/ZMvVw47BU1sLBPs4N18Jcw) 关于前端组件开发很全面的一篇文章
+* [2021 年大前端技术趋势解读](https://www.infoq.cn/article/dT002EZ7BiXGtMeU49qo) - 比较不错的业界新闻博文
+* [141期](https://weekly.zoo.team/detail/141)
