feat: add vite folder

--- a/fe_blog/2021_07_fe_week.md
+++ b/fe_blog/2021_07_fe_week.md
@@ -221,3 +221,42 @@ Safari 127 技术预览版发布， 支持通过 canvas 创建、访问和设置
 这一期的周报非常偷懒， 直接丢前端早早聊PPT合集
 尤雨溪《对下一代前端工具的思考》
 ```
+
+
+## 20210726 ~ 20210801
+### [科技爱好者周刊 - 168期]
+
+### 知乎： 前端快爆
+* [chrome 92 发布](https://zhuanlan.zhihu.com/p/392630598)
+```
+Chrome 92 发布： 
+1）更快的网络钓鱼网站检测， 检测速度提高50倍；
+2）新的网站隔离功能， Intel, ARM芯片导致的安全漏洞 18年开始引入网站隔离机制，本次更新完善该机制；
+3）UUID 生成接口： crypto.randomUUID()
+
+在7月份的 TC39 会议上， .findLast() 和 .findLastIndex()）进入 Stage 3 阶段， Realms、Object.hasOwn 等提案也进入了 Stage 3。
+CSS Module scripts 正式进入 HTML 规范中，它允许开发者用 import 的方式在 JS 中加载 CSS，例如：import styleSheet from "./styles.css" assert { type: "css" }
+```
+
+
+### 奇舞周刊
+* 406期 ~ 407期
+* [406期](https://weekly.75.team/issue406.html)
+* [Monorepo 进化论 - monorepo 内 Node 部署](https://mp.weixin.qq.com/s/qQIFD7boAS4Gv3dAdbPlNQ) Monorepo 比较冷门，不收录
+* [最熟悉的陌生人 rc-form](https://mp.weixin.qq.com/s/6yvJxLldYiabATtM6OH0pA) - 关于通用表单库源码分析，分析的挺透彻
+* [Slate 架构分析与总结](https://mp.weixin.qq.com/s/yx6eOcCX-dQlv-dNvy6aSA) - 又认识了一款 新理念Web编辑器
+* [“硬核JS” - 你的程序中可能存在漏洞](https://juejin.cn/post/6984188410659340324) - 目前关于前端（可能不止前端）内存泄露讲解最清晰的一篇文章
+* [SolidJS硬气的说：我比React还react](https://mp.weixin.qq.com/s/A_IYySoUmTQ7MLYp2IS_VA) 关于React框架与新库对比小博文
+* [GitHub Copilot体验：AI辅助编程提前看](https://mp.weixin.qq.com/s/hZIK_IC0K9eGInh4POr-6g) 关于 GitHub Copilot 更客观的博文
+* [尤雨溪：做技术哪有什么两全之策，都是取舍和平衡](https://mp.weixin.qq.com/s/_q_SnCbGyXrNnXA876tXbA)
+* [对低代码、零代码产品的一些看法](https://zhuanlan.zhihu.com/p/156887528)
+```
+尤雨溪：相比于 0.X 版本，Vite 2.0 版本的目标就是保证“生产可用”。
+```
+* [406期](https://weekly.75.team/issue407.html)
+
+### 政采云前端周刊
+* 143期 ~ 144期
+* [143期](https://weekly.zoo.team/detail/143)
+
+
