feat: 更新前端周刊博文

--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -1,14 +1,48 @@
 
 ## 20210802 ~ 20210808
 ### [科技爱好者周刊 - 170期]
+* [软件订阅制的胜利](https://github.com/ruanyf/weekly/blob/master/docs/issue-170.md)
+```
+苹果新一季财报显示有7亿付费订阅用户， 最大软件商正在改变软件销售模式，收取软件服务的订阅费。例如微软的 Office365服务也如此，将Office软件搬到云端。
+凡是可以数字化的商品，未来可能都会变成订阅制， 大家会习惯，每月像付电费那样支付各种服务订阅费。
+推广： ShowDoc， 跟 语雀文档 类似， 语雀支持钉钉登录这点很无解。
 
+实际上，工作和生活是融合在一起的，它们不是平衡关系，一方不顺利，另一方就会受到影响。 -- 贝佐斯，亚马逊老板
+```
+* [如何优化node项目的docker镜像](https://juejin.cn/post/6991689670027542564)
+* [好友关系的数据库设计](https://minimalmodeling.substack.com/p/modeling-mutual-friendship)
+* [人人可用的开源数据可视化分析工具](https://github.com/dataease/dataease)
 
 ### 知乎： 前端快爆
-
+* 暂无
 
 ### 奇舞周刊
 * [408期](https://weekly.75.team/issue408.html)
-
+* [Chromium 内核 Layout 模块学习](https://mp.weixin.qq.com/s/UYzAWkCuIPh1Z5yoqGo9nA) 浏览器Blink内核底层实现学习, CSS 相关
+* [2021 Web Worker现状](https://zhuanlan.zhihu.com/p/393428948) 流行API 总结博文
+* [6个问题助你理解React Fiber](https://segmentfault.com/a/1190000039682751) 相关文章有点多，暂不收录
+* [你可能并不需要微前端](https://mp.weixin.qq.com/s/khrziHjDfgGS4GgHa6qQJg) 并不是所有项目都需要微前端： “没有银弹”， 文章短且不高质 不收录了。
+```
+大部分时候，一个「流行」的东西，你都无法阻止不需要它的人去使用它。
+```
+* [Android/IOS Webview容器下JSBridge SDK 原理浅析 - 前端视角](https://mp.weixin.qq.com/s/H4ICaFhiJZE5ZUNEZj_U8A) JSBridge SDK实现细节讲解
+* [前端组件化实战之Button](https://juejin.cn/post/6990511054224621598) 详细讲解如何做一个 Button 组件 - 教如何重复造轮子系列
+* [计算机时间到底是怎么来的？程序员必看的时间知识！](https://mp.weixin.qq.com/s/A9fgd2xnp1YfHZ1iTMyXvw) 关于时间的6个问题解答
+```
+在 1927 年，人们以基于「天文现象」+「钟表计时」，确立了第一套时间标准：世界时（Universal Time，简称 UT）。
+在 1967 年，国际度量衡大会决定采用，以铯原子跃迁 9192631770 个周期，所持续的时间长度定义为 1 秒！
+有了原子钟，人们基于原子钟又确立了一套新的时间标准，叫做「国际原子时」（International Atomic Time，简称 TAI）。
+基于原子时 + 世界时「协调」得出的，所以科学家们把它定义为协调世界时（Coordinated Universal Time，简称 UTC）。
+是不是挺有意思？北京时间并不是在北京产生的，而是在陕西省，并与参与世界时间的制定和校准。
+```
+* [程序员的酒后真言](https://www.ruanyifeng.com/blog/2021/06/drunk-post-of-a-programmer.html)
+* [409期](https://weekly.75.team/issue409.html)
+* [Next.js 是怎么做预渲染的？](https://mp.weixin.qq.com/s/tDPkTwrR031CjsWbiVTVGw) Next.js React全家桶之一，没想好放哪个分类，暂不收录
+* [聊聊字节跳动 Node.js RPC 的设计实现](https://mp.weixin.qq.com/s/Ky6SoWJv85orqYioihTRqg) Node.js RPC重构总结
+```
+只要公司达到一定量级，其后端服务之间必定会采用 RPC 而非简单 HTTP 的形式来进行互相调用。因此，对于想做全栈或者后端 Node.js 的同学来说，早点了解与使用 RPC 是非常有必要的。
+```
+* [React.memo() 和 useMemo() 的用法与区别](https://mp.weixin.qq.com/s/zxT2GfujdbQfvrCtRxkbiQ) React 开发，优化需要知道的API
 
 ### 政采云前端周刊
 * [145期](https://weekly.zoo.team/detail/145)
