feat: 本周博文收录更新

--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -43,6 +43,44 @@
 只要公司达到一定量级，其后端服务之间必定会采用 RPC 而非简单 HTTP 的形式来进行互相调用。因此，对于想做全栈或者后端 Node.js 的同学来说，早点了解与使用 RPC 是非常有必要的。
 ```
 * [React.memo() 和 useMemo() 的用法与区别](https://mp.weixin.qq.com/s/zxT2GfujdbQfvrCtRxkbiQ) React 开发，优化需要知道的API
+* [前端debug的奇淫技巧](https://mp.weixin.qq.com/s/KMiJJ5uGuCZ9Uu1JP8bwGg) 简短且不高质，不收录
+* [element 穿梭框性能优化](https://mp.weixin.qq.com/s/mYcfNc8annYHHPPlgl2N-A) 同上，简短且不高质，这也能入周报？
+* [CSS sticky 实现返回顶部](https://juejin.cn/post/6992018973856383013) CSS 很赞的实现方式，虽然不兼容IE
+* [自动化接口测试实践经验](https://mp.weixin.qq.com/s/WrfaCt39Jb4vViKB2-qynw)
+* [Jamstack，下一代Web建站技术栈？](https://zhuanlan.zhihu.com/p/281085404) 软件行业就是吃饱了撑得，天天搞一些新概念，
+* [Jamstack ，你真的了解它吗？](https://mp.weixin.qq.com/s/bVkK2jJAuZmShYk4318kMQ) 可能是阿里内部 KPI 产物， 不收录
+* [Google 相册中新降噪和锐化算法让您的照片更清晰](https://mp.weixin.qq.com/s/0ppzlUXIaTGG0QQnAJfvmg) 照片处理黑科技，mark下
+
 
 ### 政采云前端周刊
-* [145期](https://weekly.zoo.team/detail/145)
+* [145期](https://weekly.zoo.team/detail/145) 本期26篇博文，政采云团队收录同学偷懒了！（汗
+* [这三年沉淀的前端错误监控系统，一篇文章讲透给你](https://mp.weixin.qq.com/s/NY72_cRGAPsex78YwVF_hg) 看标题就知道高质量文章系列, 最近关于监控干货最多博文
+```
+使用 new Image 进行接口上报。最后一个问题，同样都是图片，上报时选用了 1x1 的透明 GIF，而不是其他的 PNG/JEPG/BMP 文件。
+
+首先，1x1 像素是最小的合法图片。而且，因为是通过图片打点，所以图片最好是透明的，这样一来不会影响页面本身展示效果，二者表示图片透明只要使用一个二进制位标记图片是透明色即可，不用存储色彩空间数据，可以节约体积。因为需要透明色，所以可以直接排除 JEPG。
+
+同样的响应，GIF 可以比 BMP 节约 41%的流量，比 PNG 节约 35%的流量。GIF 才是最佳选择。
+```
+* [使用Babel转换JavasCript代码](https://zhuanlan.zhihu.com/p/118319241) Babel相关入门博文
+* [UIRecorder 自动化测试工具](https://www.yuque.com/artist/uirecorder/hbqzpl) 本季度自动化测试 可考虑引入该工具
+* [今天聊：大厂如何用一道编程题考察候选人水平](https://juejin.cn/post/6987529814324281380) 面试相关，放其他了，不打算设立面试分类
+* [逻辑编排在前端可视化搭建中的实践](https://juejin.cn/post/6942459694430552071) 无代码实践总结
+* [Deno 内部代码将停用 TypeScript，并公布五项具体理由](https://www.infoq.cn/article/u72qtztgazttfazzihbz) TS 开发，编译时间是个大问题
+* [我给鸿星尔克写了一个720°看鞋展厅](https://juejin.cn/post/6989439618877751303?from=main_page) 又骗我写THREEJS , 不过很赞！
+* [从输入URL到页面加载的过程](https://www.jianshu.com/p/2448148a959b) 这话题博文随便百度，没上百也有几十，且不够全面，竟然也收录
+* [JavaScript企业级编程规范(2)-常量-变量-函数-事件-操作符](https://mp.weixin.qq.com/s/J_mq58q2WpcFtmYeWahe3A) 同上！
+* [关于浏览器缓存较全面分享文章](https://www.yuque.com/docs/share/eab142fc-a0e0-432f-921a-eb0f8705dec4?#%20%E3%80%8A%E6%B5%8F%E8%A7%88%E5%99%A8%E7%BC%93%E5%AD%98%E3%80%8B) 有干货，收录！
+* [尺寸较小图片点击下载功能](https://www.yuque.com/docs/share/62d766ee-425a-4acc-ad4f-6a1cca0d5ae4?#%20%E3%80%8Ajs%E4%B8%8B%E8%BD%BD%E5%9B%BE%E7%89%87%E3%80%8B)
+* [babel原理及插件开发](https://juejin.cn/post/6844903603983892487) 关于babel实现原理讲解， 还不错
+* [新一代自动化测试工具 —— playwright](https://juejin.cn/post/6987682149574901768) 2020年微软推出的自动化测试工具， 有点新
+* [Playwright vs. Puppeteer: Which should you choose? ](https://blog.logrocket.com/playwright-vs-puppeteer/) Playwright 是Puppeteer的竞品
+* [自如客APP裸眼3D效果的实现](https://juejin.cn/post/6989227733410644005?from=main_page) 体验细节优化系列，安卓实现不属于前端
+* [认识可选链和双问号语法](https://huangzq.blog.csdn.net/article/details/103840271) 不太高质的样子！
+* [一文彻底搞懂 DvaJS 原理](https://zhuanlan.zhihu.com/p/373201039) 怎么感觉是把官方文档copy了一份， 本期政采云收录博文 太水了！
+* [百万PV商城实践系列 - 前端图片资源优化实战](https://juejin.cn/post/6989751020255445005?from=main_page) 业务实践总结博文一般有干货
+* [感谢 compose 函数，让我的代码屎山💩逐渐美丽了起来~](https://juejin.cn/post/6989020415444123662?from=main_page#heading-7)
+* [谈谈：前端如何赋能业务](https://mp.weixin.qq.com/s/_H6X6k_ppdyhP7cP1uusfg) 很常见的博文，读的过程中觉得说的很有道理，读完后感觉什么都没get到系列！
+
+
+* [146期](https://weekly.zoo.team/detail/146) 在145中发现146入口！
