--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -84,3 +84,9 @@
 
 
 * [146期](https://weekly.zoo.team/detail/146) 在145中发现146入口！
+* [我给中国奥运金牌数做了数据可视化](https://juejin.cn/post/6991610169243205662?from=main_page)  关于 canvas 图形处理博文
+* [一个神奇的前端动画 API requestAnimationFrame](https://juejin.cn/post/6991297852462858277?from=main_page) 出来好多年，前端实现动画首选API
+* [Web 动画原则及技巧浅析](https://github.com/chokcoco/iCSS/issues/121) 关于 网页动画的十二原则 的展开分析
+* [React 中 setState 是一个宏任务还是微任务？](https://juejin.cn/post/6992006476558499853?from=main_page) setState 不是宏任务也不是微任务呢， setState是一个伪异步，或者可以称为defer，即延迟执行但本身还在一个事件循环，所以它的执行顺序在同步代码后、异步代码前。
+* [设置表格列宽 —— 在富文本编辑器中的实现](https://juejin.cn/post/6992231715297034247) 文章不长，干货不少， wangEditor 富文本编辑器的表格 二次开发
+* [尤雨溪国外教程：亲手带你写个简易版的Vue！](https://juejin.cn/post/6992018709439053837?from=main_page) 文笔比较风趣，高质博文
