feat: 更新前端周刊笔记

--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -82,10 +82,51 @@
 * [感谢 compose 函数，让我的代码屎山💩逐渐美丽了起来~](https://juejin.cn/post/6989020415444123662?from=main_page#heading-7)
 * [谈谈：前端如何赋能业务](https://mp.weixin.qq.com/s/_H6X6k_ppdyhP7cP1uusfg) 很常见的博文，读的过程中觉得说的很有道理，读完后感觉什么都没get到系列！
 
+## 20210809 ~ 20210815
+### [科技爱好者周刊 - 171期]
+* [云服务流量有多贵？](https://github.com/ruanyf/weekly/blob/master/docs/issue-171.md)
+```
+小网站尽量不要托管在大型云服务商那里，流量费用实在吃不消。如果不得不放在上面，那就必须设法降低或转移流量，比如使用 CDN。
+谷歌的漏洞奖金 - 过去10年，它一共向11,055个软件漏洞，支付了29,357,516美元的奖金，平均每个漏洞2656美元（约1.8万元人民币），共有84个国家的2,022名程序员拿到奖励。这其实非常划算，一年费用不到300万美元，就能发现1000多个漏洞。如果其中任何一个漏洞被人利用，对谷歌造成的损失，可能都远远大于这个数字。这就是为什么大型软件公司都悬赏开发者，向它报告软件漏洞。
+杭州阿里达摩院 - 人工智能在图像学的应用，取得了新进展。8月12日，阿里巴巴达摩院研发的 AliceMind 系统（已在 GitHub 开源），在2021国际 VQA 挑战赛中，获得榜首成绩，并且刷新了该比赛的得分纪录，首次超越人类的分数。
+美国 Framework 公司推出了世界第一款 DIY 笔记本，用户收到的就是一堆零件，需要自己组装成一台 13.5寸的笔记本电脑。（国内小米什么时候跟进？）
+Muse 是一个无代码的网站生成器，但是生成的是 3D 虚拟网站, 3D 网站的未来前景非常光明。
 
+```
+* [谷歌漏洞报告总结博文（内附漏洞报告官网链接）](https://security.googleblog.com/2021/07/a-new-chapter-for-googles-vulnerability.html)
+* [USB-C 接口为什么这么混乱](https://www.ifanr.com/1374936)
+```
+除了 iPhone，各种电子设备现在基本都使用 USB-C 接口，但是这种接口其实非常混乱，有着众多令人迷惑的版本号，并且集成了大量协议，甚至还可以加入私有协议。
+```
+* [SQL 表格连接的可视化连接（英文）](https://dataschool.com/how-to-teach-people-sql/sql-join-types-explained-visually/)
+* [Safari 是开发者最讨厌的浏览器（英文）](https://blog.perrysun.com/2021/07/15/for-developers-safari-is-crap-and-outdated/)
+* [Candide](https://candidegardening.com/GB/identify-plants) - 上传植物照片，能识别出植物名称
+### 知乎： 前端快爆
+* [Vue 3.2 发布；Chrome 92 禁用跨域 iframe alert](https://zhuanlan.zhihu.com/p/398915243)
+```
+Vue 3.2 发布， 单文本组件， 性能优化；
+Stack Overflow 发布 2021 开发者调查报告：Python 超越 SQL 成为第三大流行语言（其他两个是 JavaScript、HTML/CSS），Node.JS 则跃居第六大流行语言。
+开始写第一行代码的年龄越来越年轻：超过 50% 的受访者在 11 到 17 岁之间编写了他们的第一行代码。（少儿编程 是趋势）
+Chrome 92 中，出于安全的考虑，禁止跨域的 iframes 使用 alert、confirm 和 prompt 等功能。
+Chrome 93 的开发者工具即将带来如下更新： 网络面板支持格式化显示 JSON 请求的功能。（这个最实用！）
+```
+
+### 奇舞周刊
+* [410期](https://weekly.75.team/issue410.html) 
+* [企业级应用搭建平台是如何设计资产体系的？](https://mp.weixin.qq.com/s/rihJS2GCcQ3wzODw7PHTaA) 低代码、无代码：参考传统行业对比 软件行业如何做流水线？
+* [Jamstack，下一代Web建站技术栈？](https://zhuanlan.zhihu.com/p/281085404) 409期 Jamstack 博文相关链接已看过！
+* [如何在大型代码仓库中删掉 6w 行废弃的文件和 exports？](https://juejin.cn/post/6995371411019710500) 改造 eslint 库实现 删除无用代码
+* [从过去到现在，聊聊 Tree-shaking](https://mp.weixin.qq.com/s/TNXO2ifPymaTxIqzBAmkSQ) Tree-shaking 的前世今生， Tree-shaking，也被称为 Live Code Inclusion，是指 Rollup 消除项目中实际未使用的代码的过程，它是一种 Dead Code Elimation 的方式，但是在输出方面会比其他方法更有效。
+* [WebGL 概念和基础入门](https://mp.weixin.qq.com/s/03VvGsJ2IUx9fcdpMxbqhQ)  WebGL 是一种 3D 绘图协议
+* [腾讯企鹅辅导 H5 性能极致优化](https://mp.weixin.qq.com/s/zJMM4SF7pc6LZPCsQfWOxw) 网站性能优化 实践总结，有干货！
+* [Axios 中的参数为啥没被完全编码](https://mp.weixin.qq.com/s/CYzXi-ZMfVRKNEktY9eKIQ) Axios 库中一个编码的小问题！
+* [前端代码常见的 Provider 究竟是什么](https://mp.weixin.qq.com/s/VlDfWpKE6GFOnLC_nNxOSA)  provider 的思想：获取对象，并不关心对象从哪里来，策略 + 工厂/其他方式就是 Provider。
+* [浏览器隐身模式下的你，仍然没有任何隐私](https://mp.weixin.qq.com/s/nISm93vAiG3iCqtQIeg7Sg) 挺有意思的博文， 从日常生活、技术角度较全面的讲解了浏览器 隐身模式 各种数据统计 和 技术实现问题。
+
+### 政采云前端周刊
 * [146期](https://weekly.zoo.team/detail/146) 在145中发现146入口！
 * [我给中国奥运金牌数做了数据可视化](https://juejin.cn/post/6991610169243205662?from=main_page)  关于 canvas 图形处理博文
-* [一个神奇的前端动画 API requestAnimationFrame](https://juejin.cn/post/6991297852462858277?from=main_page) 出来好多年，前端实现动画首选API
+* [一个神奇的前端动画 API requestAnimationFrame](https://juejin.cn/post/6991297852462858277?from=main_page) 相关API发布多年，大部分浏览器兼容，前端实现动画首选API
 * [Web 动画原则及技巧浅析](https://github.com/chokcoco/iCSS/issues/121) 关于 网页动画的十二原则 的展开分析
 * [React 中 setState 是一个宏任务还是微任务？](https://juejin.cn/post/6992006476558499853?from=main_page) setState 不是宏任务也不是微任务呢， setState是一个伪异步，或者可以称为defer，即延迟执行但本身还在一个事件循环，所以它的执行顺序在同步代码后、异步代码前。
 * [设置表格列宽 —— 在富文本编辑器中的实现](https://juejin.cn/post/6992231715297034247) 文章不长，干货不少， wangEditor 富文本编辑器的表格 二次开发
