--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -131,3 +131,12 @@ Chrome 93 的开发者工具即将带来如下更新： 网络面板支持格式
 * [React 中 setState 是一个宏任务还是微任务？](https://juejin.cn/post/6992006476558499853?from=main_page) setState 不是宏任务也不是微任务呢， setState是一个伪异步，或者可以称为defer，即延迟执行但本身还在一个事件循环，所以它的执行顺序在同步代码后、异步代码前。
 * [设置表格列宽 —— 在富文本编辑器中的实现](https://juejin.cn/post/6992231715297034247) 文章不长，干货不少， wangEditor 富文本编辑器的表格 二次开发
 * [尤雨溪国外教程：亲手带你写个简易版的Vue！](https://juejin.cn/post/6992018709439053837?from=main_page) 文笔比较风趣，高质博文
+
+## 20210816 ~ 20210822
+### [科技爱好者周刊 - 172期]
+
+### 知乎： 前端快爆
+
+### 奇舞周刊
+
+### 政采云前端周刊
