docs: 更新前端周刊相关笔记

--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -134,6 +134,28 @@ Chrome 93 的开发者工具即将带来如下更新： 网络面板支持格式
 
 ## 20210816 ~ 20210822
 ### [科技爱好者周刊 - 172期]
+[我们会死于气候灾难么？](https://github.com/ruanyf/weekly/blob/master/docs/issue-172.md)
+```
+联合国发布了一份《气候问题评估报告》, 国内媒体没怎么报道这件事，但在国际上，它都是各国的头版新闻。
+报告认为，根据各种科学研究和观测结果，可以认定 气候灾难已经发生了，并将继续加剧。 人类现在所做的种种减碳努力，并不能避免灾难，只是为了不让最糟糕的结果发生。
+美国国会通过一项法律，规定2027年后生产的所有汽车都必须配备酒驾监控系统，防止驾驶员酒后驾车。美国每年因为酒后驾车，有超过10000人丧生。
+```
+[内燃机原理 - 英文](https://ciechanow.ski/internal-combustion-engine/)
+[为什么人们会肥胖？](https://slimemoldtimemold.com/2021/07/07/a-chemical-hunger-part-i-mysteries/)
+
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [411期](https://weekly.75.team/issue411.html)
+
+
+### 政采云前端周刊
+* [147期](https://weekly.zoo.team/detail/147) 
+
+
+## 20210823 ~ 20210829
+### [科技爱好者周刊 - 172期]
 
 ### 知乎： 前端快爆
 
