feat: 前端博文收藏更新

--- a/fe_blog/2021_08_fe_week.md
+++ b/fe_blog/2021_08_fe_week.md
@@ -155,10 +155,68 @@ Chrome 93 的开发者工具即将带来如下更新： 网络面板支持格式
 
 
 ## 20210823 ~ 20210829
-### [科技爱好者周刊 - 172期]
+### [科技爱好者周刊 - 173期]
+* [网络收音机的设计](https://github.com/ruanyf/weekly/blob/master/docs/issue-173.md)
+```
+软件功能硬件化， 为老年人设计的产品越简单越好。去掉WIFI功能，只支持内置4G卡上网。
+放弃次要功能，换来产品的简单性，从而达到更好的用户满意度。
+less is more, worse is better !
+Facebook 公司推出虚拟会议软件 Horizo​​n Workrooms，将虚拟会议提升到一个新的境界。
+今年9月1日开始，公安部在全国28个城市，全面推行电子驾照，效力与纸质驾照完全相同，以后有车了优先使用电子驾照；
+中国农业科学院植物工厂团队宣布，在室内环境中，水稻的生长周期可以缩短一半，从传统大田环境下120天以上减少到60天左右。这意味着，每过两个月，水稻就可以丰收一次。
+
+最好的程序员不是善于编写复杂代码，而是有能力为复杂的问题提出简单的解决方案。只有糟糕的程序员，才会对简单的问题提出复杂的解决方案。
+```
+* [通过CSS判断用户是否为移动设备（英文）](https://css-irl.info/detecting-hover-capable-devices/)
+```
+鼠标有悬停（hover）事件，移动设备由于不使用鼠标，自然就没有这个动作。因此就可以通过它判断，用户是否正在使用移动设备。
+```
+* [上传Excel可自动生成图表()国外站点](https://rawgraphs.io/#step1)
+* [new - 将React 类组件变成 hook 组件的命令行工具](https://github.com/yklydxtt/react-class-to-fc)
+* [StackOverflow 开发者调查 2021 版](https://insights.stackoverflow.com/survey/2021#key-territories-country)
+```
+React 取代 Jquery 成为最常用的 前端框架；
+Python 超越 SQL 成为我们第三大流行技术，Node.JS 跃居第六大流行技术。
+```
+* [电鸭社区](https://eleduck.com/) 国内最早的远程工作社区，讨论和分享远程、外包、零活、兼职、驻场等工作机会。
 
 ### 知乎： 前端快爆
+* [技术周刊 2021-08-26：Next.js 11.1 发布 WebAssembly SIMD 可实战](https://zhuanlan.zhihu.com/p/404245894)
+```
+Chrome 94 中 CSS flex-basis支持了content、min/max/fit-content 四个新的属性值。至此，Chrome 中 Flexbox 已经支持规范中的全部特性。此前，Firefox 已经支持除 fit-content 外的其他三个值。
+
+WebAssembly SIMD 规范正式进入到最后的 Phase 5 阶段，意味着该规范已经趋于完成。
+SIMD 是 Single Instruction Multiple Data 的缩写，中文术语为「单指令多数据流」，可以使用单条指令并行处理多个数据。
+WebAssembly SIMD 定义了一个可移植的、高性能的 SIMD 操作子集，极大的提升了 WebAssembly 数据处理的性能。
+此前 Chrome 91、Node.js 16.4.0 和 Rust 1.54.0 已经正式开启该特性，其他相关工具链正在紧锣密鼓的支持中。
+点评：Rust 不愧是 WASM 的亲爹 ，这么快就支持了，这瓜保熟！
+
+Firefox 92 正式启用 AVIF 图片格式支持，AVIF 是基于 AV1 视频格式的现代图像格式，支持无损压缩和动画，AVIF 通常比 WebP 具有更好的压缩比。此前 Chrome 85 中已经支持。
+AVIF 与其直接竞争者 JPEG XL相比有如下优势：
+在非常低的保真度（libjpeg q30 及以下）下压缩率提高 30%
+如果你已经有了 AV1 解码器，支持 AVIF 的解码器体积很小
+非常适合动画，可以用来取代 GIF（因为这是一个完整的视频编解码器）
+JPEG XL 则有如下优势：
+在最重要的保真度（libjpeg q60 及更高版本）上的压缩率提高了 20-40%
+渐进式解码（使其非常适合 Web 上加载）
+无损 JPEG 再压缩
+更高的位深度（用于摄影）
+编码速度提高 10 倍
+最佳无损压缩格式
+整体而言解码器尺寸更小
+支持 CMYK 和 Spot Color（专色通道）
+最小的头文件开销
+
+Next.js 11.1 发布：
+实验性支持 ES Modules，在官方的一项性能测试中，编译时间从大约 500ms (Babel) 减少到大约 10ms (SWC)，压缩耗时从约 250ms (Terser) 减少到约 30ms (SWC)。
+Rust 在 Node.js 中一定会占有一席之地，SWC to Node.js 的构建工具 napi-rs 也一定会大放异彩。在新一轮的框架大比拼中，Vue 喊来了 esbuild（go），Next.js 直接「收」了 SWC 作者，接下来又会演绎一段什么样的故事呢？
+
+```
 
 ### 奇舞周刊
+[412期](https://weekly.75.team/issue412.html)
+
 
 ### 政采云前端周刊
+[148期](https://weekly.zoo.team/detail/148)
+
