--- a/fe_blog/2021_09_fe_week.md
+++ b/fe_blog/2021_09_fe_week.md
@@ -125,3 +125,62 @@ catch 中的 error 参数将自动被推断为 unknown 而非 any，此行为对
 * [TypeScript 4.4 beta 版本发布](https://www.infoq.cn/article/CKTNFBILCvOFZDNuAkD9) TS 新特性分析
 * [你的 Tree-Shaking 真的起作用了吗？](https://jishuin.proginn.com/p/763bfbd2de0d) 无关代码移除，代码优化相关
 * [npm 实用命令及版本号](https://www.yuque.com/docs/share/ca61dff6-146e-4398-80d7-4b8a1c5226ea?#gLFu2) 日常查询实用博文
+
+
+## 20210913 ~ 20210919
+### [科技爱好者周刊 - 176期]
+* [中国法院承认 GPL 吗？](https://github.com/ruanyf/weekly/blob/master/docs/issue-176.md)
+```
+开源软件通常带有许可证。大家一直很想知道，如果国内用户不遵守许可证，可以去法院告他吗？
+国内并未承认 GPL， 只是： GPL 许可证的第八条明确写明，如果使用者不开源自己的代码，GPL 授权失效。
+世界目前最大的二氧化碳捕捉工厂，最近在冰岛建成了。它通过风扇吸入空气，过滤出二氧化碳，然后再将二氧化碳液化，注入地下1,000米深处的矿洞存储。
+日本的电子游戏厅曾经盛极一时，各种街机玲琅满目，但是，现在已经盛况不再。根据警方的统计，1986年日本全国曾经有 26,573 家游戏厅，到了2019年只剩下 4,022 家，疫情爆发以后，数目更是继续锐减，可能不到最高峰时的十分之一。
+《自然》杂志最近报道，科学家将果蝇单独隔离，与群居的果蝇进行对比。结果发现，独居的果蝇有更少的睡眠、更多的进食。
+这个实验如果可以引申到人类，就表示长期独居对健康不利，群居、与他人的日常互动对健康更有利。
+新汽车： 一般取消后视镜；
+绝对值的计算并不简单；
+Chrome 89 开始支持 ES 模块的“包导入地图”功能（package import maps），可以为导入模块指定别名。
+世界上最长的钢琴， 长度接近10米。
+学会减少不确定性 - 不确定性造成更多的压力！
+幸福的秘诀就是永远抱有低期望值。
+```
+* [使用 Node.js 开发一个 CLI 工具](https://wx.kaikeba.com/vipcourse/zjebl5s5om/l4pklf0vxc?tenant=wx5046bc7413796142_channelParams670241&channelParams=%7B%22tenant%22%3A%22wx5046bc7413796142%22,%22content%22%3A%22%22,%22utm_source%22%3A%22natural%22%7D&sell=0&sub_goods_id=)
+* [网页版 - Vs Code](https://justyy.com/archives/45744) 使用网页版 VS code 可在平板电脑上写代码、提交代码
+* [Ventoy](https://github.com/ventoy/Ventoy) 一个 U 盘的启动盘制作工具，直接把系统镜像文件复制到 U 盘即可。它支持电脑启动时，从多个系统镜像文件里面选择一个启动。
+* [WebDen](https://webden.dev/) 专供手机浏览器使用的网页代码编辑环境，提供 HTML、CSS、JS 的开发和调试。
+
+
+### 知乎： 前端快爆
+暂无；
+
+### 奇舞周刊
+[415期](https://weekly.75.team/issue415.html)
+* [TypeScript是如何工作的？](https://mp.weixin.qq.com/s/XF8tWJlwZC04WTdmltmXNQ) TS 编译原理
+* [如何生成稳定的动态 treemap（矩形树图）关键技术揭晓](https://mp.weixin.qq.com/s/IxfbVPc8Nx_8x-C9g3eyMw) 一个H5活动的实现思路
+* [Node.js 应用全链路追踪技术——[全链路信息获取]](https://mp.weixin.qq.com/s/SpC50ZqbKnKjlGBTSPMd9w)
+* [React Profiler 的使用](https://mp.weixin.qq.com/s/L9sSAR0iaoFSpMnzARfxcw) React 性能优化 工具介绍
+* [中秋节快乐，使用CSS3实现小火箭🚀绕月飞行](https://juejin.cn/post/7006721748368359460?share_token=c34d35cd-3a57-49b7-bc91-443e35bc11f6) CSS3 动画效果
+* [Vue3 Ref 语法糖，告别 .value 的写法](https://mp.weixin.qq.com/s/n9Dwaj29nqYYzvchSnN-ww) Vue 实验阶段语法糖
+* [谈谈这些年我对框架的理解](https://mp.weixin.qq.com/s/mZ7KuFjyCWNCAq7HnXg96A) 关于 React 和 Vue 性能优化思路区别讲解的不错
+* [React 下一代管理 - Recoil](https://juejin.cn/post/7006253866610229256) 向未来设计的react状态管理库——recoil, React 官方库。
+```
+Recoil的设计思想就是我们把状态拆分一个一个的原子atom，再由selector派生出更多状态，最后React的组件树订阅自己需要的状态，当有原子状态更新，只有改变的原子及其下游节点有订阅他们的组件才会更新。也就是说，recoil其实构建了一个 有向无环图 ，这个图和react组件树正交，他的状态和react组件树是完全 解耦 的。
+```
+
+
+### 政采云前端周刊
+[151期](https://weekly.zoo.team/detail/151)
+* [建设微服务API网关的一些实践](https://mp.weixin.qq.com/s/FA5WpvgRtaYz1Nmx0nvQ_Q) API网关已经成为微服务架构中不可或缺的一环
+```
+限流隔离/熔断降级： 时常我们会遇见一些异常流量，典型的就是恶意爬虫。
+```
+* [推荐一款切图神器，设计稿一键导出 Vue/微信小程序 代码](https://mp.weixin.qq.com/s/LWTdiFs0dnuXMxP2OFm99Q) 疑似 CodeFun 小软文 
+* [摩纳哥 在线编辑器](https://microsoft.github.io/monaco-editor/index.html) 政采云 又偷懒了， 微软出的在线编辑器库 硬生生被分类到工具， 而且说明也太敷衍
+* [从零到一实现企业级微前端框架，保姆级教学](https://juejin.cn/post/7004661323124441102#heading-0) 微前端 实践高质博文
+* [浓缩了这 20+ 站点的前端滋补汤~干了](https://juejin.cn/post/7004513614224687111) 里面的不少站点值得收藏
+    * [GRID GARDEN](https://cssgridgarden.com/#zh-cn) CSS grid 学习站点
+    * [Color Hunt](https://colorhunt.co/) 前端配色工具站点
+    * [w3c 规范检测](http://jigsaw.w3.org/css-validator/#validate_by_uri) 以通过输入你的站点,或者上传你的相关文件,来检测你的代码是否严格符合 w3c 的标准规范.
+    * [WallHaven](https://wallhaven.cc/toplist?page=4) 作者认为 “最好的图片素材网站”
+* [web前端运行时动画性能监控](https://jelly.jd.com/article/601fc77d61dbb7014cff31b1) 前端动画（CSS动画 或 JS 动画）性能检测 思路
+* [美团-设计稿（UI视图）自动生成代码方案的探索](https://mp.weixin.qq.com/s/BKPSR4pU8tDKcKWJnTXJiQ) imgCook 的竞品， 后续可能开源！
