feat: 更新前端周刊笔记

--- a/fe_blog/2021_10_fe_week.md
+++ b/fe_blog/2021_10_fe_week.md
@@ -1,5 +1,6 @@
 
 ## 20210927 ~ 20211003
+### 科技爱好者周刊
 * 暂无
 
 ### 知乎： 前端快爆
@@ -25,3 +26,20 @@
 ```
 可选链不能用于赋值,只能用于判断是否会短路，会短路就返回undefined，否则就返回该key的值(如果想赋默认值，就要使用它的兄弟??)
 ```
+
+
+## 2021004 ~ 20211010
+### 科技爱好者周刊 - 178期
+* [家庭太阳能发电的春天](https://github.com/ruanyf/weekly/blob/master/docs/issue-178.md)
+```
+10月5日 俄罗斯宇宙飞船 将女演员、导演送入国际空间站， 停留125天拍摄一部电影。
+全国供电紧张，是因为煤价上涨，但电费没涨， 导致发电站每发一度电都是亏损， 所以电不够了。
+目前火力发电还是大头， 占到70%左右， 后续电费应该会上调。
+VR编程环境， VR 环境的一个好处是，可以任意变换虚拟工作地点，一会在蓝天白云的山顶，一会又在海滩上工作。
+苹果公司有两应用商店 IOS 商店 和 Mac 商店， Mac 设备每月上架APP 越来越少。
+游戏分成两种。一种是有限游戏，另一种是无限游戏。有限游戏的目的是获胜，某方获胜就结束了，无限游戏的目的是继续游戏，你玩这个游戏是为了可以继续玩下去。
+-- 《无限创业》
+```
+* [Service Worker 简介](https://developers.google.com/web/fundamentals/primers/service-workers) 谷歌官方的 Service Worker 教程，介绍什么是 PWA 应用，以及怎么开发，写得非常好，很容易懂。官方提供中文版翻译。
+* [JS 库的免费公共 CDN](https://www.webfx.com/blog/web-design/free-public-cdns/) 网上有一些 JS 库的公共 CDN，可以从它们加载库脚本。本文列出了主要的名单。
+
