feat: 前端周刊笔记更新

--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -1,12 +1,86 @@
 ## 20211101 ~ 20211107
-
 ### 科技爱好者周刊 - 182期
+* [新人优惠的风险](https://github.com/ruanyf/weekly/blob/master/docs/issue-182.md)
+```
+上海杨浦区某商场写字楼搞活动，只要是商场 App 的新用户，都可以获得500积分，抵扣一小时的商场停车费;
+结果，写字楼里面120多个白领使用接码平台，反复注册新用户，申领积分抵扣停车费，让商场损失37万多元，最多一辆车抵扣的停车费超过万元。所谓“接码平台”，就是提供各种手机号，代接验证码，每条收取一定的费用。
+程序员也是有风险的。开发接收短信的自动化工具，本身不违法，但是用户如果用于非法用途，就可能会被法律追责。
+以上场景只要加“一个车牌号只能享受一次活动优惠”就能杜绝，新人APP方案 设计有漏洞，导致损失巨大金额， 走上官司维权途径。
 
+巨型水稻，平均高度1.8米；最大的优势在于吃水很深，田里可以蓄60公分到80公分的水。这个深度就可以搞稻鱼共生的项目：养鱼，养虾，养蟹。
+风力发电墙：挪威公司另辟蹊径，发明了风力发电墙，采用一个网格状的钢架，上面安装了100多个小型风力涡轮发电机。这种墙高达300多米，跟埃菲尔铁塔差不多。
+防中风头带，为有或疑似中风患者 提供监控，并即时拨打 急救电话；
+土壤发电： 通过土壤里微生物分解有机物进行发电， 一平方米的肥沃土壤每年可以产生200wh的电能（0.2度电）， 发的电力很小， 只适合公园内 LED灯，农田里的传感器等供电；
+蓝牙追踪： 每个蓝牙设备有一固定的硬编码ID， 根据这个可监测用户行动轨迹；通过蓝牙追踪用户是可能的，门卫、停车场这样的地方，如果部署了蓝牙追踪，完全可以了解用户的动态。（前提是用户手机开启了蓝牙，一般像我这种用户为减少耗电，会将手机的蓝牙关闭）
+
+新的 CSS 属性accent-color，可以设置表单的选择框控件（checkbox 或 radio）选中时的颜色。这类控件一般都定制化，使用场景不多；
+
+你可能听过这样的建议：做一个终身学习者，每天学一点，不断进步。很少有人能够遵循这条建议，因为在开始后的很长时间内，根本看不到有什么效果。时间周期越短，直线看起来越平坦，当你远远落后时，这是非常令人沮丧的。
+但是，只要坚持下去，保持向上的斜率，长期以后，你将远远地超越原来的人生道路。
+```
+* [全是干货！90岁台积电创始人1.5小时演讲，讲透60年创业和管理心得](https://zhidx.com/p/301575.html)
+* [解读国家科学技术大奖](https://zhuanlan.zhihu.com/p/429247683) 身在电子厂，仰望最高奖！
+* [如何找到数组里的唯一数？](https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/) mark! 有些业务场景需要用到！
+```
+function findUniqueNumber(nums) {
+    let memo = {};
+    for (let i = 0; i < nums.length; i++) {
+        const num = nums[i];
+        if (!memo[num]) {
+            memo[num] = 1;
+        } else {
+            memo[num] += 1;
+        }
+    }
+    return Object.keys(memo).reduce((unique,num) => {
+        return memo[num] === 1 ? Number(num) : unique;
+    }, NaN);
+};
+```
+* 一行代码就能让谷歌搜索结果，删除你的站点；
+```
+<meta name="googlebot" content="noindex">
+```
+* [Agora Flat](https://flat.whiteboard.agora.io/) 一个前后端都开源的在线教室，企业可以用来作为自己的内部培训工具，或者对外的远程教学工具。
+* [Semi Design](https://semi.design/zh-CN/) Ant Design 的竞品
+* [Read Aloud](https://github.com/ken107/read-aloud) 开源的浏览器朗读插件，可以朗读整个网页或选定文本，支持40多种语言，包括中文。
 
 ### 知乎： 前端快爆
+* [技术周刊 2021-11-05](https://zhuanlan.zhihu.com/p/429922315) npm知名仓库 coa、rc 遭遇恶意投毒攻击；Next.js 12正式发布
+```
+npm 仓库中的 coa、rc 包被攻击者劫持投毒攻击，目前 npm 官方仓库已将相应版本的恶意包删除。(表示很少使用功能coa, rc包)
+```
+* [TypeScript 4.5 RC 发布](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5-rc/) 
+```
+支持来自 node_modules 的 lib，允许用户覆盖特定的 lib。
+新增 Awaited 工具类型，可用于递归展开 Promise 类型，返回 Promise 的 resolve 值类型。
+模板字符串类型可作为判别式。
+module 配置新增 es2022，主要特性是 top-level await。
+ES Modules 将被推迟到 TypeScript 4.5 之后的版本支持。
+```
+```
+Firefox 94 发布: 
+开发者可以使用 HTMLElement.enterkeyhint 或全局属性 enterkeyhint 为虚拟键盘上的回车键添加文案或 icon 提示。
+新增 StructuredClone() 全局函数，可用于复制复杂的 JavaScript 对象。(对象深拷贝？)
+支持了 HTMLScriptElement.supports() 静态方法，这提供了一种简单而统一的方法来检查浏览器是否支持特定类型的脚本，例如 ES Modules。
 
+Next.js 12 正式发布，官方称之为有史以来更新幅度最大的版本，包含如下更新：
+Rust 编译器，将快速刷新速度提高 3 倍，构建速度提高 5 倍。
+中间件（beta），在 Next.js 中使用代码而不是配置，实现了充分的灵活性。
+支持 React 18，现在支持原生 Next.js API，以及 Suspense。
+<Image /> 支持 AVIF 格式，可减少图片体积约 20%。
+优化 SEO。
+原生 ES Modules 支持，与标准化模块系统保持一致。
+实验性支持 URL 导入，从任何 URL 导入包，无需安装。
+实验性支持 React 服务器组件，包括 SSR Streaming。
+```
+* [JavaScript开发者应懂的33个概念](https://github.com/stephentian/33-js-concepts) 整理的博文 大杂烩， 适合收藏吃灰！
 
 ### 奇舞周刊
-
+* [421期](https://weekly.75.team/issue421.html) 8篇博文
+* [现代 Web 开发困局](https://mp.weixin.qq.com/s/PjpA4CBoC3Q0-gT5f5qlPg)  Modern.js 布道博文
+* [可能是最完善的 React+Vite 解决方案，阿里飞冰团队发布 icejs 2.0 版本](https://mp.weixin.qq.com/s/AQelBkgZ-rRykxcNXynJBQ)  飞冰布道博文
+* [在 Vue 中为什么不推荐用 index 做 key](https://mp.weixin.qq.com/s/d4o77UWz4FouwYnqzCApcA) 考虑性能、防错等方面不用
 
 ### 政采云前端周刊
+* [158期](https://weekly.zoo.team/detail/158)  额， 继上周两篇博文后，本周竟然发了一片空白， 待补充！
