feat: 周刊阅读笔记更新

--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -84,3 +84,48 @@ Rust 编译器，将快速刷新速度提高 3 倍，构建速度提高 5 倍。
 
 ### 政采云前端周刊
 * [158期](https://weekly.zoo.team/detail/158)  额， 继上周两篇博文后，本周竟然发了一片空白， 待补充！
+
+
+## 2021-11-08 ~ 2021-11-14
+### 科技爱好者周刊
+* [腾讯的员工退休福利](https://github.com/ruanyf/weekly/blob/master/docs/issue-183.md)
+```
+表示腾讯也认可，员工到了40岁左右，如果再待在第一线，对公司的贡献恐怕也有限了，公司对你也没有太大的期待，不如给你一个诱因，让你主动离开，把岗位留给新人去拼。阮一峰观点 对 程序员 工作年限 一直持悲观态度，作为程序员 读完他文章都要思考未来，考虑未来哪些行业适合老程序员。
+
+世界首个 露天煤矿无人驾驶项目在内蒙古通过验收， 极寒天气（零下40度）运煤；
+USB Type-C 是目前通用的充电和数据传输接口，但是这个接口非常混乱，有多种版本。USB 论坛最近通过了新的 Type-C 接口标志，主要区分两个指标：一个是支持 40Gbps 传输速度，另一个是支持 240w 充电功率。以后，满足这些指标的充电器和线材，就会印上相应的标志。
+
+NFT 项目只是技术精英的传销，1%的人拿走50%的钱，超过80%的人由于没有下线而亏钱。 -- Evan Armstrong
+```
+[财富创造机制的清单](https://blog.rongarret.info/2009/10/catalog-of-wealth-creation-mechanisms.html) 所有的财富创造活动，都可以归类为九种模式。不管是什么新技术，都是使用这九种模式来创造财富。很有启发意义的一篇文章。
+
+### 知乎： 前端快爆
+* [技术周刊 2021-11-12：Angular 13 发版](https://zhuanlan.zhihu.com/p/432710495)
+```
+Chrome Dev Summit 2021 已于 11 月 3 日举行，包含如下内容：
+Google 已和其他浏览器厂商共同针对 Flexbox、Grid、position: sticky、aspect-ratio 和 transform 进行了专项兼容性优化；
+Chromium 的新渲染引擎 RenderingNG 的到来也支持了 Container Queries；
+
+Angular 13 已发版：
+完全弃用 View Engine 并采用新的 Ivy 作为渲染引擎；
+不再依赖兼容性编译器 ngcc；
+不再支持 IE 11；
+
+V8 发布 9.7，支持了 Stage 3 提案 Array 的原型方法 findLast 和 findLastIndex。
+
+Firefox 94 - 95 中，将带来 SpiderMonkey 的新版本：WebAssembly 中：追加了 exception 支持的变更；WASM64 的剩余功能已实现；
+
+Chrome 97 的开发者工具中，将支持 Recorder 以录制或重放用户的操作流。
+
+position有个属性叫sticky，称为粘（zhan）性定位元素。
+1) 粘性定位常用于定位字母列表的头部元素。
+2) 中间状态的导航栏, 这种交互主要用于商城网站页面下，在页面中间有个tabbar导航，而这个导航是随着页面的滚动，会固定在页面的某个位置上。
+
+CSS aspect-ratio属性可以明确元素的高宽比例，日后一定是一个高频使用的CSS属性。
+```
+[如何用不可见的字符来实现 JavaScript 代码后门。](https://certitude.consulting/blog/en/invisible-backdoor/)  在存在不受信代码的平台，如 FaaS 平台可能就会遇到这样的问题。
+
+### 奇舞周刊
+
+
+### 政采云前端周刊
