feat: 前端周刊笔记更新

--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -81,6 +81,10 @@ Rust 编译器，将快速刷新速度提高 3 倍，构建速度提高 5 倍。
 * [现代 Web 开发困局](https://mp.weixin.qq.com/s/PjpA4CBoC3Q0-gT5f5qlPg)  Modern.js 布道博文
 * [可能是最完善的 React+Vite 解决方案，阿里飞冰团队发布 icejs 2.0 版本](https://mp.weixin.qq.com/s/AQelBkgZ-rRykxcNXynJBQ)  飞冰布道博文
 * [在 Vue 中为什么不推荐用 index 做 key](https://mp.weixin.qq.com/s/d4o77UWz4FouwYnqzCApcA) 考虑性能、防错等方面不用
+* [写给新手看的前端模块化只是](https://mp.weixin.qq.com/s/tVy0meFSWUysGYTX_DmlBg) 关于模块化历史讲解的不错！
+* [从零到1解读 rollup plugin](https://mp.weixin.qq.com/s/fZu3w-oAxzDfY6Bil05oog)
+* [一键配置开发环境——前端环境管理工具 AppToolkit 正式发布](https://mp.weixin.qq.com/s/phGAlrY7Luu4S_3gf9QmNQ) 换电脑、入职新人 推荐工具
+* [前端监控的那些事](https://mp.weixin.qq.com/s/XDDYfoJ6f18lSd5a_NujjA)
 
 ### 政采云前端周刊
 * [158期](https://weekly.zoo.team/detail/158)  额， 继上周两篇博文后，本周竟然发了一片空白， 待补充！
@@ -124,6 +128,57 @@ position有个属性叫sticky，称为粘（zhan）性定位元素。
 CSS aspect-ratio属性可以明确元素的高宽比例，日后一定是一个高频使用的CSS属性。
 ```
 [如何用不可见的字符来实现 JavaScript 代码后门。](https://certitude.consulting/blog/en/invisible-backdoor/)  在存在不受信代码的平台，如 FaaS 平台可能就会遇到这样的问题。
+
+### 奇舞周刊
+* [422期](https://weekly.75.team/issue422.html) 8篇博文
+* [浅析 Web 录屏技术方案与实现](https://mp.weixin.qq.com/s/f55pB-MEO6VboFsihb-_gQ) 基于 WebRTC 的有感录屏, canvas 截图绘制视频,rrweb 录制
+```
+文章从有感和无感两个角度来浅析录屏方案的实现。页面录屏的应用场景场景比较丰富，有感录制常见用于网页线上考试、直播和语音视频通话等实时交互场景，而无感录制则更多应用在重要操作记录、bug 重现场景和产品运营分析用户习惯等场景，二者各有千秋。基于用户数据的安全和敏感，目前政采云倾向采用有感录制进行试点试用，避免引起安全纠纷。在录屏技术方案不断地完善和趋向成熟的同时，我们也应尊重用户的数据安全和隐私，选择更合适自身场景的方案使用。
+```
+* [助力双 11 个性化会场高效交付：Deco 智能代码技术揭秘](https://mp.weixin.qq.com/s/oMMvLWz6u5aMSKCsCGg0Hg) 京东出品， 设计稿到生成代码探索；
+* [两条命令让你的git自动变基](https://segmentfault.com/a/1190000040712052) 保持git提交记录干净的小结文章
+* [记一次 Bundleless 迁移经历，重新认识 Vite 预构建](https://mp.weixin.qq.com/s/pUzUr1lTfX3wkzJL_Xv1oQ) Vite 构建 迁移小结博文
+```
+Bundleless 和传统的构建工具相比，最大的特点就是不用将业务代码打包(虽然第三方库还是得打包，这个没有办法)，尤其是在项目逐渐庞大的时候，可以极大地提升构建效率和开发体验。经过在公司业务项目的落地，底层从 Webpack 切到 Vite，冷启动速度提升400% 以上，原本20 秒启动的项目现在3~4 秒即可冷启，并且在依赖没有变动的情况下，二次启动直接秒开，不得不感慨：实在是太快了！
+```
+* [Js 异步处理演进，Callback=>Promise=>Observer](https://juejin.cn/post/7029093184332365855)
+* [3D 穿梭效果？使用 CSS 轻松搞定](https://juejin.cn/post/7028757824695959588)
+* [TypeScript 4.5 — 浅谈模块能力增强](https://mp.weixin.qq.com/s/zZnXaBbsADoBNPCc4mD_HA)
+```
+目前 Node Js 版本： 稳定版16， beta版17， 研发版18
+```
+* [编程语言的本质是什么](https://mp.weixin.qq.com/s/4OP-YXXuPy20w1MCp8Mxrw)
+```
+不同的语言最终都是控制计算机的一些硬件来工作的，从硬件层面来看他们是没有区别的。
+```
+
+### 政采云前端周刊
+* [159期](https://weekly.zoo.team/detail/159) 2篇博文
+* [字节跳动Web Infra发起 Modern.js 开源项目，打造现代 Web 工程体系](https://juejin.cn/post/7023623964110880782) 大公司看不上，小公司用不了！
+* [使用JSDoc提高代码的可读性](https://juejin.cn/post/6844903828123320334) VS Code 注释插件 用法介绍
+
+
+## 2021-11-15 ~ 2021-11-21
+
+### 科技爱好者周刊
+
+
+### 知乎： 前端快爆
+暂无
+
+### 奇舞周刊
+
+
+### 政采云前端周刊
+
+
+## 2021-11-22 ~ 2021-11-28
+
+### 科技爱好者周刊
+
+
+### 知乎： 前端快爆
+暂无
 
 ### 奇舞周刊
 
