--- a/fe_blog/2021_12_fe_week.md
+++ b/fe_blog/2021_12_fe_week.md
@@ -1,10 +1,49 @@
 ## 2021-11-29 ~ 2021-12-05
 
 ### 科技爱好者周刊
+[低纬度，高海拔，气候优势](https://github.com/ruanyf/weekly/blob/master/docs/issue-186.md)
+```
+四川攀枝花： 低纬度，高海拔 的城市， 适合冬季旅游！
 
+东南大学团队成功将校训“止于至善”，写入一段 DNA，然后又从 DNA 上读取出来，实现了 DNA 存储技术的新突破。
+
+广州的一个商场外围，打造了一圈名为“城市涟漪”的公共空间，包含儿童乐园、篮球场、步道、休息座位等。（广州新网红打卡点）， 可惜没写具体商场位置；
+
+塑料是一种不环保材料，1000年也不会降解。为了提醒人们这一点，越南的一家设计公司收集了各种塑料垃圾，包括泡沫塑料盒、塑料袋、塑料板等，然后邀请家人和朋友向一千年后的人们写信。他们把这些信件印上了塑料，再做成一本书。
+
+光刻机是生产芯片的核心设备，最先进的芯片需要用到极紫外光刻机（EUV），世界上只有荷兰阿斯麦公司（ASML）能够生产。
+
+Firefox 浏览器开始原生提供 structuredClone() 方法，用于对象的深拷贝（deep clone）。
+
+Ambient Chaos: 一个网页的背景音生成器，提供20多种声音，比如风声、雨声、火车站、教堂钟声等。每种都可以调节音量，还可以选择声音进行合成。
+```
+* [钉钉考勤作弊 APP 的法律争议](https://www.toutiao.com/a7028533764280500744/?wid=1638677173372)
+* [Microdiff](https://github.com/AsyncBanana/microdiff) 一个 JS 库，用来对两个对象进行 Diff 比较，判断它们有何不同，体积非常小，不到 1KB。
+* [OCRmyPDF](https://ocrmypdf.readthedocs.io/en/latest/index.html) 一个对图像 PDF 进行文字识别，并添加为文字层的命令行工具。安装中文语言包后，支持识别中文。
+* [giscus](https://giscus.app/zh-CN) 一个基于 GitHub Discussions（讨论区） 的网站评论系统，可以插在自己的网页中，供用户发表评论。无需数据库，全部数据存在 GitHub 仓库的 Discussions 中。
 
 ### 知乎： 前端快爆
+* [2021-11-30：React 18进入beta；TypeScript 4.5 正式发布；Chrome 96 发布](https://zhuanlan.zhihu.com/p/439674973)
+```
+Chrome 96 正式版发布:
+浏览器后退缓存（bfcache）现在可以在稳定版中使用，允许即时恢复到以前访问过的页面。
+往返缓存（或BFcache）是一种浏览器优化，可实现即时的后退和前进导航。它极大地改善了用户的浏览体验，尤其是那些网络或设备速度较慢的用户。
+支持 WebAssembly 保持对 JavaScript 和 DOM 对象的引用，并将其作为参数传递。
+实验性支持 importance 属性，允许开发者指定资源类型（如 CSS、字体、脚本、图像和 iframe）的优先级， 用于优化 Web 体验。
+鉴于明年初将推出 Chrome 100，部分业务在解析三位数的 User-Agent 字符串版本时可能有问题，Chrome 96-99 版本中将新增 #force-major-version-to-100 标志，开发者可以开启该标志对可能的问题进行早期测试。
 
+TypeScript 4.5 正式版发布:
+module 配置新增 es2022，可以在 TypeScript 中使用 es2022 语法（主要是 top-level await）。
+ES Modules 将被推迟到 TypeScript 4.5 之后的版本支持。
+
+React 18 由 Alpha 阶段进入 Beta 阶段，新增三个 Hook： useSyncExternalStore，useId，useInsertionEffect。
+
+Electron 16.0.0 正式发布，更新内容包括：
+将 Chromium 升级至 96、Node.js 升级至 v16.9.1、 V8 引擎升级至 v9.6。
+支持 WebHID API。
+为 app.requestSingleInstanceLock 增加数据参数以在实例之间共享数据。
+支持将 securityOrigin 传递给媒体权限请求处理程序。
+```
 
 ### 奇舞周刊
 
