feat: 更新周刊笔记

--- a/fe_blog/2021_11_fe_week.md
+++ b/fe_blog/2021_11_fe_week.md
@@ -161,13 +161,29 @@ Bundleless 和传统的构建工具相比，最大的特点就是不用将业务
 ## 2021-11-15 ~ 2021-11-21
 
 ### 科技爱好者周刊
-
+[政府的存储需求有多大？](https://github.com/ruanyf/weekly/blob/master/docs/issue-184.md)
+```
+新闻：政府数据丢失，22TB 找回14TB，丢失了8TB。中央政府最好出台一个方案，推动全国的政府单位把数据放到云端，不要自建内部机房。最好有一个统一的“政府云”，提供方便的存储接口，给各地的公家单位使用，这样可以省很多钱，也有利于统一备份，避免数据丢失。 -- 有实现的必要， 但很难实现， 遇到的非技术难题太多！
+世界最大的飞行器是一家英国公司制造的氦气飞艇，叫做 Airlander 10，长达91米；
+挪威政府宣布，2025年将禁售燃油汽车，这个日期是全世界最早的。
+```
+* [MySQL 数据库索引概览](https://blog.csdn.net/wallace_www/article/details/117264149)
+* [Xterm.js](https://xtermjs.org/) 可在网站上放置 命令行窗口，可以与服务器进行通信
+* [Vididoo](https://vididoo.vercel.app/) 这个网站收集了一些处理视频的在线工具，在网页上就可以完成视频缩放、剪接、图像转视频、提取音频等操作。
 
 ### 知乎： 前端快爆
 暂无
 
 ### 奇舞周刊
-
+* [423期](https://weekly.75.team/issue423.html) 8篇博文
+* [requestAnimationFrame 执行机制探索](https://mp.weixin.qq.com/s/ocFcBRjj8xzizF5ebFepdA)
+* [使用 Vue3 + AR 撸猫，才叫好玩](https://mp.weixin.qq.com/s/u_UDaYgeUkyJKgB0f6jk5Q)
+* [千相千面图形语法](https://zhuanlan.zhihu.com/p/432951280) 本文介绍了一个 Flutter 数据可视化库 Graphic 的使用。通过 Graphic 的图形语法定义变换，一步步将柱状图演变为饼图，展示图形语法的灵活丰富。同时也让初学者了解图形语法基本概念。
+* [Webpack 性能系列四：分包优化](https://mp.weixin.qq.com/s/LrASIdA19iwIwng29G5HpA)
+* [NestJS、TypeORM 和 PostgreSQL 项目开发和数据库迁移完整示例（译）](https://mp.weixin.qq.com/s/IanpQznpAqL6_tYCl2e7IA)
+* [走进科学之神秘的拖拽碧油鸡](https://mp.weixin.qq.com/s/0o9dt5OeUcUeXH9MmP4ZXw)
+* [容器并不能解决一切问题](https://mp.weixin.qq.com/s/HKnW50EfxBnKtNyz5OfW3Q)
+* [重排、重绘、合成，你真的懂吗？](https://mp.weixin.qq.com/s/57aMCVDjuVswEFFep3omLQ)
 
 ### 政采云前端周刊
 
@@ -175,12 +191,12 @@ Bundleless 和传统的构建工具相比，最大的特点就是不用将业务
 ## 2021-11-22 ~ 2021-11-28
 
 ### 科技爱好者周刊
-
+[美国宪法拍卖，一个区块链案例](https://github.com/ruanyf/weekly/blob/master/docs/issue-185.md)
 
 ### 知乎： 前端快爆
 暂无
 
 ### 奇舞周刊
-
+* [424期](https://weekly.75.team/issue424.html) 8篇博文
 
 ### 政采云前端周刊
